--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - ./db/data/postgres:/var/lib/postgresql/data  
     ports:
       - "5432:5432"
-  backend:
+  bot:
     build: .
     environment:
       - PORT_POSTGRES=5432
