--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
     "@discordjs/voice": "^0.5.4",
-    "discord.js": "dev",
+    "discord.js": "^13.0.0-dev.4206e35.1626350625",
     "dotenv": "^10.0.0",
     "libsodium-wrappers": "^0.7.9",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "youtube-dl-wrap": "^2.1.0",
+    "ytdl": "^1.4.1",
+    "ytdl-core-discord": "^1.3.1"
   },
   "devDependencies": {
     "@types/node": "^15.12.5"
