--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,9 @@
 	"workspaceFolder": "/workspace",
 
 	// Set *default* container specific settings.json values on container create.
-	"settings": {},
+	"settings": {
+		"git.path": "/usr/bin/git",
+	},
 
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": []
