--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "typescript": "^4.3.4"
   },
   "devDependencies": {
-    "@types/node": "^15.12.5",
-    "tsc": "^2.0.3"
+    "@types/node": "^15.12.5"
   }
 }
