--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord.js": "^13.0.0-dev.4206e35.1626350625",
     "dotenv": "^10.0.0",
     "libsodium-wrappers": "^0.7.9",
+    "opusscript": "0.0.8",
     "typescript": "^4.3.4",
     "youtube-dl-wrap": "^2.1.0",
     "ytdl": "^1.4.1",
