chore: add strict null checks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "strict": true,
       "esModuleInterop": true,
       "skipLibCheck": true,
+      "strictNullChecks": true,
       "forceConsistentCasingInFileNames": true,
       "outDir": "dist",
       "sourceMap": true,
