--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^10.0.0",
     "libsodium-wrappers": "^0.7.9",
     "opusscript": "0.0.8",
+    "popyt": "^5.0.0",
     "ts-patch": "^1.4.1",
     "typescript": "^4.3.4",
     "youtube-dl-wrap": "^2.1.0",
