--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prepare": "ts-patch install -s",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "tsc && node dist/index.js"
@@ -11,9 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/voice": "^0.5.4",
+    "@zerollup/ts-transform-paths": "^1.7.18",
     "discord.js": "dev",
     "dotenv": "^10.0.0",
-    "typescript": "^4.3.4"
+    "libsodium-wrappers": "^0.7.9",
+    "opusscript": "0.0.8",
+    "popyt": "^5.0.0",
+    "ts-patch": "^1.4.1",
+    "typescript": "^4.3.4",
+    "youtube-dl-wrap": "^2.1.0",
+    "ytdl": "^1.4.1",
+    "ytdl-core-discord": "^1.3.1"
   },
   "devDependencies": {
     "@types/node": "^15.12.5"
