--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "prepare": "ts-patch install -s",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "tsc && node dist/index.js"
+    "start": "tsc && node dist/index.js",
+    "postinstall": "patch-package"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@discordjs/voice": "^0.5.4",
     "@zerollup/ts-transform-paths": "^1.7.18",
-    "discord.js": "dev",
+    "console-stamp": "^3.0.3",
+    "discord.js": "^13.6.0",
     "dotenv": "^10.0.0",
     "libsodium-wrappers": "^0.7.9",
     "opusscript": "0.0.8",
+    "patch-package": "^6.4.7",
     "popyt": "^5.0.0",
     "ts-patch": "^1.4.1",
     "typescript": "^4.3.4",
